@@ -1,6 +1,7 @@
 0.9.6
 - Fixed non-ASCII character handling (thanks, Roman!)
 - Fully removed C-based socket code
+- support for dplyr verbs sample_n() and sample_frac()
 
 0.9.5
 - Removed package date (Thanks, Dimitar)
